Login Service-Controller eklendi, Security eklendi

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Secret": "this is very very secret key that no one should know"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
